--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -151,20 +151,19 @@ h2{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content: space-around;
         align-items: center;
         margin-bottom: 100px;
         .main-pic{
-            flex: 1;
+            
             .main-pic-img{
-                width: 500px;
+                height: auto;
             }
         }
         .main-texto{
-            flex: 1;
+            
             width: 500px;
-            margin-left: 100px;
             h2{
-                width: 500px;
                 font-weight: 700;
                 font-size: 3rem;
                 margin-bottom: 1.5rem;
@@ -199,17 +198,18 @@ h2{
     .main-content-2{
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
+        justify-content: space-around;
         align-items: center;
         margin-bottom: 100px;
         .main-pic{
-            flex: 1;
+            
             .main-pic-img{
-                width: 500px;
+                height: auto;
             }
         }
         .main-texto{
-            flex: 1;
+            
             width: 500px;
             margin-right: 100px;
             h2{
@@ -248,16 +248,17 @@ h2{
     .main-content-3{
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
+        justify-content: space-around;
         align-items: center;
         .main-pic{
-            flex: 1;
+            
             .main-pic-img{
-                width: 500px;
+                height: auto;
             }
         }
         .main-texto{
-            flex: 1;
+        
             width: 500px;
             margin-left: 100px;
             h2{
