--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -205,7 +205,7 @@ h2{
         }
         .main-texto{
              width: 500px;
-             margin-left: -100px;
+            
             h2{
                 width: 500px;
                 font-weight: 700;
@@ -479,8 +479,16 @@ h2{
             }
         }
         .footer-icon{
-            width: 25px;
-            height: 25px;
+            width: 22px;
+            height: 22px;
+        }
+    }
+    .footer-legal{
+        .legales{
+            p,a{
+                font-weight: 300;
+                font-size: 13px;
+            }
         }
     }
 }
@@ -515,64 +523,66 @@ h2{
 @media screen and(max-width: 990px){
         .hero{
             .hero-bg{
-                .hero-content{
-                    display: flex;
-                    flex-direction: column;
-                    .hero-texto{
-                        max-width: 500px;
-                        text-align: center;
-                        margin-top: 150px;
-                        margin-bottom: -220px;
-                        h1{
-                            font-weight: 700;
-                            font-size: 3.5rem;
-                            padding-bottom: 10px;
+                    .hero-content{
+                        display: flex;
+                        flex-direction: column;
+                        .hero-texto{
+                            max-width: 500px;
                             text-align: center;
-                        }
-                        h3{
-                            font-size: 1rem;
-                            text-align: center;
-                            padding-bottom: 15px;
-                        }
-                        .hero-img{
-                            .hero-img-set{
-                                width: 150px;
-                                height: 100px;
+                            margin-top: 150px;
+                            margin-bottom: -220px;
+                            h1{
+                                font-weight: 700;
+                                font-size: 3.5rem;
+                                padding-bottom: 10px;
+                                text-align: center;
                             }
-        
-                    }
-                    .hero-buttons{
-                        font-size: .8rem; 
-                        .btn-crea{
-                            border-radius: 5px;
-                            padding: 10px 15px 10px 15px; 
-                            margin-right: 10px;
+                            h3{
+                                font-size: 1rem;
+                                text-align: center;
+                                padding-bottom: 15px;
+                            }
+                            .hero-img{
+                                margin: 0;
+                                
+                            }
+                        .hero-buttons{
+                            font-size: .8rem; 
+                            .btn-crea{
+                                border-radius: 5px;
+                                padding: 10px 15px 10px 15px; 
+                                margin-right: 10px;
+                            }
+                            .btn-funciona{
+                                border-radius: 5px;
+                                padding: 10px 15px 10px 15px;  
+                            }
+                            
                         }
-                        .btn-funciona{
-                            border-radius: 5px;
-                            padding: 10px 15px 10px 15px;  
-                        }
-                        
                     }
-                }
                 }
         }
             }
 
         .main-content{
-             margin: 500px auto 50px auto;
-             .main-content-1{
+             margin: 600px auto 50px auto;
+             text-align: center;
+             .main-content-1, .main-content-2, .main-content-3{
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                margin: 0 auto;
+                align-items: center;
+                margin: auto;
                 .main-pic{
+                    margin: auto;
+                    padding: 20px;
                     .main-pic-img{
                         width: 300px;
                     }
                 }
                 .main-texto{
-                    width: 500px;
+                    width: 400px;
+                    margin-bottom: 50px;
                     h2{
                         font-weight: 700;
                         font-size: 3rem;
@@ -582,13 +592,12 @@ h2{
                         letter-spacing: -0.5px;
                     }
                     p{
-                        font-size: 1.25rem;
-                        font-weight: 300;
-                        width: 600px;
-                        padding-right: 10px;
+                        font-size: 1.2rem;
+                        margin: auto;
+                        max-width: 300px;
                     }
                     h5{
-                        margin-top: 30px;
+                        margin-top: 20px;
                         a{
                             text-decoration: none;
                             color: rgb(34, 89, 75);
